# Multi_Agent_ETL

./: .gitignore  README.md  STRUCTURE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
specs/: design.md  requirements.md  tasks.md
src/etl_platform/: __init__.py
src/etl_platform/agents/: __init__.py  base_agent.py  data_discovery_agent.py  data_discovery_agent_langgraph.py  schema_mapping_agent.py  schema_mapping_agent_langgraph.py
src/etl_platform/engines/: __init__.py
src/etl_platform/services/: __init__.py
src/etl_platform/shared/: __init__.py  message_bus.py  models.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/compute/: main.tf  outputs.tf  variables.tf
terraform/modules/message_bus/: main.tf  outputs.tf  variables.tf
terraform/modules/metadata_store/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf
terraform/modules/networking/: main.tf
tests/: __init__.py  conftest.py  test_data_discovery_agent.py  test_data_discovery_agent_langgraph.py  test_message_bus.py  test_schema_mapping_agent.py  test_schema_mapping_agent_langgraph.py
